--- a/page1.html
+++ b/page1.html
@@ -1,46 +1,47 @@
+<!-- page1.html -->
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VD的博客 - 第1页</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <aside id="sidebar">
-                <div class="toggle-btn" onclick="toggleMenu()">
-                    <span>&gt;</span>
-                    <span class="menu-title">目录</span>
-                </div>
-                <ul id="nav-menu" class="nav-menu">
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="page2.html">第2页</a></li>
-                    <li><a href="page3.html">第3页</a></li>
-                </ul>
-            </aside>
-        </nav>
-    </header>
+    <div class="toggle-btn" onclick="toggleMenu()">
+        <span class="menu-icon">☰</span>
+        <span class="menu-title">目录</span>
+    </div>
+
+    <aside id="sidebar" class="sidebar">
+        <ul class="nav-menu">
+            <li><a href="index.html">🏠 首页</a></li>
+            <li><a href="page1.html" class="active">📄 第1页</a></li>
+            <li><a href="page2.html">📄 第2页</a></li>
+            <li><a href="page3.html">📚 第3页</a></li>
+        </ul>
+    </aside>
 
     <main>
         <div class="content-section">
-            <h2>第1页精彩内容</h2>
-            <p>这里是第1页的详细内容啦，可以是病毒，或者其他软件。（如果没有目录 请手动返回）</p>
-            <!-- 添加文本按钮 -->
-            <a href="https://b23.tv/j4DMaOz" target="_blank" class="link-button">电脑破坏助手视频</a>
-            <a href="https://system-vd-zdy.lanzoub.com/iepPn2hhi27e" target="_blank" class="link-button">电脑破坏下载</a>
+            <h2>📄 第1页精彩内容</h2>
+            <p>我会在这更新我的病毒或教程，欢迎大家关注！</p>
+            <div class="button-group">
+                <a href="https://b23.tv/j4DMaOz" class="link-button">电脑破坏助手视频</a>
+                <a href="https://system-vd-zdy.lanzoub.com/iepPn2hhi27e" class="link-button">电脑破坏助手下载</a>
+            </div>
+            <a href="https://b23.tv/RSnTTRg" class="link-button">PC·报废视频</a>
+            <a href="https://system-vd-zdy.lanzoub.com/iKRgk2hhi22j" class="link-button">PC·报废下载</a>
         </div>
+        <a href="https://system-vd-zdy.lanzoub.com/iMAf72lmz1ah" class="link-button">Windows安装程序移除限制 Beta版下载(病毒)</a>
     </main>
 
+
     <footer>
-        <p>&copy;SYSTEM-VD-ZDY Copyright</p>
-        <p>bilibili:SYSTEM-VD-ZDY</p>
-        <p>作者QQ334063894</p>
+        <p>&copy; SYSTEM-VD-ZDY Copyright</p>
+        <p>📺 bilibili: SYSTEM-VD-ZDY</p>
+        <p>📧 作者联系邮箱:vdzdy@foxmail.com</p>
     </footer>
 </body>
-
 </html>
