--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VD的博客 - 第2页</title>
+    <title>VD的博客 - 📄 第2页</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
@@ -21,23 +21,23 @@
 
     <main>
         <div class="content-section">
-            <h2>第2页趣味分享</h2>
-            <p>这是第2页呈现给大家的独特内容哦，和第1页可以是完全不同的主题，比如可以是关于美食的探索经历，或是一本好书的深度解读等等，尽情在这发挥你的创意填充内容吧。</p>
+            <h2>📄 第2页个人分享</h2>
+            <p>我会易语言，python，html这些语言，现在正在学python！（有点难）awa~</p>
         </div>
     </main>
 
     <aside id="sidebar">
         <ul id="nav-menu" class="nav-menu">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="page1.html">第1页</a></li>
-            <li><a href="page3.html">第3页</a></li>
+            <li><a href="index.html">🏠 首页</a></li>
+            <li><a href="page1.html">📄 第1页</a></li>
+            <li><a href="page3.html">📚 第3页</a></li>
         </ul>
     </aside>
 
     <footer>
         <p>&copy;SYSTEM-VD-ZDY Copyright</p>
         <p>bilibili:SYSTEM-VD-ZDY</p>
-        <p>作者QQ334063894</p>
+        <p>📧 作者联系邮箱:vdzdy@foxmail.com</p>
     </footer>
 </body>
 
