--- a/page1.html
+++ b/page1.html
@@ -29,19 +29,19 @@
             <p>我会在这更新我的病毒或教程，欢迎大家关注！</p>
             <div class="button-group">
                 <a href="https://b23.tv/j4DMaOz" class="link-button">电脑破坏助手视频</a>
-                <a href="/dnphzs.zip" class="link-button">电脑破坏助手下载</a>
+                <a href="https://system-vd-zdy.lanzoub.com/iepPn2hhi27e" class="link-button">电脑破坏助手下载</a>
             </div>
             <a href="https://b23.tv/RSnTTRg" class="link-button">PC·报废视频</a>
-            <a href="/PC·bf.zip" class="link-button">PC·报废下载</a>
+            <a href="https://system-vd-zdy.lanzoub.com/iKRgk2hhi22j" class="link-button">PC·报废下载</a>
         </div>
-        <a href="/Windows azcxycxz.zip" class="link-button">Windows安装程序移除限制 Beta版下载(病毒)</a>
+        <a href="https://system-vd-zdy.lanzoub.com/iMAf72lmz1ah" class="link-button">Windows安装程序移除限制 Beta版下载(病毒)</a>
     </main>
 
 
     <footer>
         <p>&copy; SYSTEM-VD-ZDY Copyright</p>
         <p>📺 bilibili: SYSTEM-VD-ZDY</p>
-        <p>📧 作者联系邮箱:vdzdy@foxmail.com</p>
+        <p>📧 粉丝群1038620619</p>
     </footer>
 </body>
 </html>
