--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <footer>
         <p>&copy;SYSTEM-VD-ZDY Copyright</p>
         <p>bilibili:SYSTEM-VD-ZDY</p>
-        <p>📧 作者联系邮箱:vdzdy@foxmail.com</p>
+        <p>📧粉丝群1038620619</p>
     </footer>
 </body>
 
