--- a/page1.html
+++ b/page1.html
@@ -35,6 +35,7 @@
             <a href="https://system-vd-zdy.lanzoub.com/iKRgk2hhi22j" class="link-button">PC·报废下载</a>
         </div>
         <a href="https://system-vd-zdy.lanzoub.com/iMAf72lmz1ah" class="link-button">Windows安装程序移除限制 Beta版下载(病毒)</a>
+        <a href="https://system-vd-zdy.lanzoub.com/i5TPJ2subgve" class="link-button">禁用windows蓝屏</a>
     </main>
 
 
