--- a/fqj/index.html
+++ b/fqj/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-by-vdzdy（lzf）
+by：vdzdy（lzf）
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>父亲节快乐 - 特别的爱给特别的您</title>
@@ -568,7 +568,7 @@ by-vdzdy（lzf）
     
     <!-- 音频元素 -->
     <audio id="backgroundMusic" loop>
-        <source src="https://foruda.gitee.com/attach_file/1749959674410391522/%E5%9B%9B%E7%82%B9%E7%9A%84%E6%B5%B7%E6%A3%A0%E8%8A%B1%E6%9C%AA%E7%9C%A0-%E6%B8%A1.mp3?token=a3172cdf1f845692ede18bf801afafb0&ts=1749959797&attname=%E5%9B%9B%E7%82%B9%E7%9A%84%E6%B5%B7%E6%A3%A0%E8%8A%B1%E6%9C%AA%E7%9C%A0%20-%20%E6%B8%A1.mp3" type="audio/mpeg">
+        <source src="https://foruda.gitee.com/attach_file/1749960797150377858/music.MP3?token=df8bdfc3ffaf2c9231a6cf0d7046b017&ts=1749960801&attname=music.MP3">
     </audio>
 
     <script>
